# Bayan

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
include/: com_parser.hpp  dir_parser.hpp  file_comparator.hpp  file_dublicate_parser.hpp  file_wrapper.hpp  filter.hpp  mask.hpp  options.hpp
src/: com_parser.cpp  dir_parser.cpp  file_dublicate_parser.cpp  file_wrapper.cpp  filter.cpp  main.cpp  mask.cpp
test/: bayan_test.cpp
